garrison and scouts html

--- a/shiganshina/index.html
+++ b/shiganshina/index.html
@@ -67,12 +67,12 @@
           </a>
         </div>
         <div class="brigad-card">
-          <a href="scouts">
+          <a href="scouts.html">
             <img src="../images/scouts.jpg" alt="Image" class="image">
           </a>
         </div>
         <div class="brigad-card">
-          <a href="garrison">
+          <a href="garrison.html">
             <img src="../images/garrison.jpg" alt="Image" class="image">
           </a>
         </div>
